--- a/APIs/PubMed_API_Resources_and_Tutorials/PubMed_API.ipynb
+++ b/APIs/PubMed_API_Resources_and_Tutorials/PubMed_API.ipynb
@@ -108,7 +108,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "id": "9d15cf84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing with a simple, hard-coded search term...\n",
+      "❌ FAILURE: The search failed even with a simple term. Error: HTTP Error 400: Bad Request\n",
+      "\n",
+      "--- For debugging, here is the value of your SEARCH_QUERY variable: ---\n",
+      "'climate+change'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test with a hard-coded, guaranteed-valid search term ---\n",
+    "print(\"Testing with a simple, hard-coded search term...\")\n",
+    "\n",
+    "try:\n",
+    "    # A simple, valid PubMed query\n",
+    "    simple_term = \"BRCA1 AND human[organism]\"\n",
+    "    handle = ez.esearch(db=\"pubmed\",\n",
+    "                        term=simple_term,\n",
+    "                        usehistory=\"y\")\n",
+    "    search_results = ez.read(handle)\n",
+    "    handle.close()\n",
+    "    print(\"✅ SUCCESS: The search with the simple term worked!\")\n",
+    "    print(f\"Found {search_results['Count']} results.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ FAILURE: The search failed even with a simple term. Error: {e}\")\n",
+    "\n",
+    "\n",
+    "# --- Now, print your actual search query for inspection ---\n",
+    "# This line assumes SEARCH_QUERY was loaded in your setup cell.\n",
+    "print(\"\\n--- For debugging, here is the value of your SEARCH_QUERY variable: ---\")\n",
+    "print(f\"'{SEARCH_QUERY}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9e3281e8",
    "metadata": {},
    "outputs": [
@@ -127,7 +170,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(SEARCH_QUERY)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mRunning esearch...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m handle = \u001b[43mez\u001b[49m\u001b[43m.\u001b[49m\u001b[43mesearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb\u001b[49m\u001b[43m=\u001b[49m\u001b[43mDATABASE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                        \u001b[49m\u001b[43mterm\u001b[49m\u001b[43m=\u001b[49m\u001b[43mSEARCH_QUERY\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                        \u001b[49m\u001b[43musehistory\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43my\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# IMPORTANT: Use the history server\u001b[39;00m\n\u001b[32m      8\u001b[39m search_results = ez.read(handle)\n\u001b[32m      9\u001b[39m handle.close()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(SEARCH_QUERY)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mRunning esearch...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m handle = \u001b[43mez\u001b[49m\u001b[43m.\u001b[49m\u001b[43mesearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb\u001b[49m\u001b[43m=\u001b[49m\u001b[43mDATABASE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                        \u001b[49m\u001b[43mterm\u001b[49m\u001b[43m=\u001b[49m\u001b[43mSEARCH_QUERY\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                        \u001b[49m\u001b[43musehistory\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43my\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# IMPORTANT: Use the history server\u001b[39;00m\n\u001b[32m      8\u001b[39m search_results = ez.read(handle)\n\u001b[32m      9\u001b[39m handle.close()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/All/Github/Project_Repositories/Prisma_Compliance_Resource/APIs/PubMed_API_Resources_and_Tutorials/.venv/lib/python3.13/site-packages/Bio/Entrez/__init__.py:239\u001b[39m, in \u001b[36mesearch\u001b[39m\u001b[34m(db, term, **keywds)\u001b[39m\n\u001b[32m    237\u001b[39m variables.update(keywds)\n\u001b[32m    238\u001b[39m request = _build_request(cgi, variables)\n\u001b[32m--> \u001b[39m\u001b[32m239\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/All/Github/Project_Repositories/Prisma_Compliance_Resource/APIs/PubMed_API_Resources_and_Tutorials/.venv/lib/python3.13/site-packages/Bio/Entrez/__init__.py:634\u001b[39m, in \u001b[36m_open\u001b[39m\u001b[34m(request)\u001b[39m\n\u001b[32m    632\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(max_tries):\n\u001b[32m    633\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m634\u001b[39m         handle = \u001b[43murlopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    635\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m exception:\n\u001b[32m    636\u001b[39m         \u001b[38;5;66;03m# Reraise if the final try fails\u001b[39;00m\n\u001b[32m    637\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m i >= max_tries - \u001b[32m1\u001b[39m:\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/urllib/request.py:189\u001b[39m, in \u001b[36murlopen\u001b[39m\u001b[34m(url, data, timeout, context)\u001b[39m\n\u001b[32m    187\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    188\u001b[39m     opener = _opener\n\u001b[32m--> \u001b[39m\u001b[32m189\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mopener\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
